--- a/gly_torch_new/configs/config001.yaml
+++ b/gly_torch_new/configs/config001.yaml
@@ -1,6 +1,8 @@
 train:
   batch_size: 16
+  crop_size: 320
   epoch_num: 60
+  img_size: 320
   is_nesterov: false
   learning_rate: 0.0001
   optimizer_name: adam
@@ -18,7 +20,8 @@ train:
   weight_decay: 1.0e-05
 valid:
   batch_size: 16
-  input_size: 320
+  crop_size: 320
+  img_size: 366
   model_name: DenseNet169
   transform: !!python/object:data_augmentation.DataTransform
     _num_crops: 10
