--- a/gly_torch_new/configs/config014.yaml
+++ b/gly_torch_new/configs/config014.yaml
@@ -17,23 +17,7 @@ train:
     pad: true
     random_crop_factor: 0.37874046951740975
     ten_crop_positions: null
-  weight_decay: !!python/object/apply:numpy.core.multiarray.scalar
-  - !!python/object/apply:numpy.dtype
-    args:
-    - f8
-    - 0
-    - 1
-    state: !!python/tuple
-    - 3
-    - <
-    - null
-    - null
-    - null
-    - -1
-    - -1
-    - 0
-  - !!binary |
-    qKrLQ14gwj4=
+  weight_decay: 2.160839839828361e-06
 valid:
   batch_size: 16
   crop_size: 320
