--- a/gly_torch_new/configs/config016.yaml
+++ b/gly_torch_new/configs/config016.yaml
@@ -17,23 +17,7 @@ train:
     pad: true
     random_crop_factor: 0.3673849870553338
     ten_crop_positions: null
-  weight_decay: !!python/object/apply:numpy.core.multiarray.scalar
-  - !!python/object/apply:numpy.dtype
-    args:
-    - f8
-    - 0
-    - 1
-    state: !!python/tuple
-    - 3
-    - <
-    - null
-    - null
-    - null
-    - -1
-    - -1
-    - 0
-  - !!binary |
-    DOVtkPp6QT8=
+  weight_decay: 0.0005334590394873453
 valid:
   batch_size: 16
   crop_size: 320
