--- a/gly_torch_new/test_configs/config06.yaml
+++ b/gly_torch_new/test_configs/config06.yaml
@@ -2,7 +2,7 @@ batch_size: 8
 crop_size: 331
 img_size: 354
 model_name: PNASNet
-path_model: models/PNASNet.pt
+path_model: models/PNASNet.pth.tar
 transform: !!python/object:data_augmentation.DataTransform
   _num_crops: 10
   aug_rotate: 0
